fixed scrollbar appearance jittering bug

--- a/public/style.css
+++ b/public/style.css
@@ -349,7 +349,7 @@ th {
 	#app {
 		display: flex;
 		flex-flow: column nowrap;
-		overflow-y: auto;
+		overflow-y: hidden;
 	}
 
 	#result-container {
@@ -398,10 +398,13 @@ th {
 /* Filter view is full screen when you first land on app */
 #app.awaitingFirstSubmit {
 	--width-filterContainer: 100%;
-	/* overflow-y: scroll; */
-	overflow-y: hidden;
+	overflow-y: scroll;
 }
 
 #app.animatedCollapse {
 	transition: grid-template-columns 0.6s ease;
+}
+
+.awaitingFirstSubmit #result-container {
+	display: none;
 }
